--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -13,7 +13,7 @@
                     <a class="nav-link" href="{{ path('page_about') }}">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="{{ path('product_list') }}" tabindex="-1">Products</a>
                 </li>
             </ul>
             <form class="form-inline mt-2 mt-md-0">
