--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -10,7 +10,7 @@
                     <a class="nav-link" href="{{ path('page_home') }}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('page_about') }}">About</a>
+                    <a class="nav-link" href="{{ path('order_index') }}">Orders</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('product_list') }}" tabindex="-1">Products</a>
