--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -3,10 +3,47 @@
 
 {% block body %}
 
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container mx-auto my-auto">
-            <h1 class="display-1">Edit Product Page</h1>
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header">
+                Edit Product
+            </div>
+            <div class="card-body">
+                <form action="{{ path('product_update') }}" method="post">
+                    <input type="hidden" name="id" value="{{ product.id }}">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" name="name"
+                        value="{{ product.name }}">
+                    </div>
+                    <div class="form-group">
+                        <label for="price">Price</label>
+                        <input type="number" class="form-control" id="price" name="price"
+                               value="{{ product.price }}">
+                    </div>
+                    <div class="form-group">
+                        <label for="quantity">Quantity</label>
+                        <input type="number" class="form-control" id="quantity"
+                               name="quantity"
+                               value="{{ product.quantity }}">
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea name="description" id="description" cols="40" rows="10"
+
+                        >{{ product.description }}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="imageUrl">Image Url</label>
+                        <input type="text" class="form-control" id="imageUrl"
+                               name="imageUrl"
+                               value="{{ product.imageUrl }}">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </form>
+            </div>
         </div>
+
     </div>
 
 
